--- a/projeto/src/components/Dashboard.css
+++ b/projeto/src/components/Dashboard.css
@@ -351,13 +351,14 @@
 }
 
 .timer-container {
+  margin: 5rem 50%;
+  width: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  margin: 2rem 0;
   background-color: #f5f7ff;
-  padding: 15px; /* Reduzido para um visual mais compacto */
+  padding: 10px; /* Reduzido para um visual mais compacto */
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   animation: pulse 2s infinite;
